[package]
name = "tree-sitter-graph"
version = "0.6.0"
description = "Construct graphs from parsed source code"
homepage = "https://github.com/tree-sitter/tree-sitter-graph/"
repository = "https://github.com/tree-sitter/tree-sitter-graph/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[dependencies]
log = "0.4"
regex = "1"
smallvec = { version="1.6", features=["union"] }
thiserror = "1.0"
tree-sitter = "0.20"
serde = "1.0"
serde_json = "1.0"
ansi_term = "0.12"

[dependencies.string-interner]
version = "0.12"
default-features = false
features = ["std", "inline-more", "backends"]

[dev-dependencies]
env_logger = "0.9"
indoc = "1.0"
tree-sitter-python = "0.19.1"

# cli-only dependencies below

[[bin]]
name = "tree-sitter-graph"
required-features = ["cli"]

[features]
cli = ["anyhow", "clap", "env_logger", "tree-sitter-config", "tree-sitter-loader"]

[dependencies.anyhow]
optional = true
version = "1.0"

[dependencies.clap]
optional = true
version = "3.2"

[dependencies.env_logger]
optional = true
version = "0.9"

[dependencies.tree-sitter-config]
optional = true
version = "0.19"

[dependencies.tree-sitter-loader]
optional = true
version = "0.19"
