[package]
name = "tree-sitter-graph"
version = "0.12.0"
description = "Construct graphs from parsed source code"
homepage = "https://github.com/tree-sitter/tree-sitter-graph/"
repository = "https://github.com/tree-sitter/tree-sitter-graph/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[[bin]]
name = "tree-sitter-graph"
required-features = ["cli"]

[features]
cli = ["anyhow", "clap", "env_logger", "term-colors", "tree-sitter-config", "tree-sitter-loader"]
term-colors = ["colored"]

[dependencies]
anyhow = { version = "1.0", optional = true }
clap = { version = "3.2", optional = true }
colored = { version = "2", optional = true }
env_logger = { version = "0.9", optional = true }
log = "0.4"
regex = "1.3.2"
serde = "1.0"
serde_json = "1.0"
smallvec = { version="1.6", features=["union"] }
streaming-iterator = "0.1.9"
thiserror = "1.0.7"
tree-sitter = "0.24"
tree-sitter-config = { version = "0.24", optional = true }
tree-sitter-loader = { version = "0.24", optional = true }

[dev-dependencies]
env_logger = "0.9"
indoc = "1.0"
tree-sitter-python = "=0.23.5"
