[package]
name = "tree-sitter-tsg"
description = "tree-sitter grammar for the tree-sitter graph DSL"
version = "0.1.0"
keywords = ["incremental", "parsing", "tsg"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-tsg"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = [
  "Douglas Creager <dcreager@dcreager.net>"
]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
